--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="./styles.css">
-    <title>Brett Zeligson's Personal Website</title>
+    <title>Brett Zeligson Thesis Data Visuals</title>
     <meta charset="utf-8">
     <link rel="icon" type="image/x-icon" href="./favicon3.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
