--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <span class="credits">
+        Thesis Project<br>
+        <span>Brett Zeligson</span>
+    </span>
     <div class="menu">
         <a href="#nyc-geo">NYC Geo Data</a>
         <a href="#nyc-socio">NYC Socio Data</a>
@@ -176,6 +180,4 @@
     makeLinks(nyc_gcnn_perc, "container21")
     makeLinks(nyc_gcnn_avg, "container22")
 </script>
-
-
 </html>
